[package]
name = "escrow-project"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_project"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.16.0"
# bls12_381 = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
bls12_381_plus = "0.4.1"
# rand = "0.8"
